<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>libneupan</name>
  <version>0.1.0</version>
  <description>
    C++ port of the NeuPAN planner core (DUNE + NRMP + PAN), no ROS
    dependencies. Ported from NeuPAN by Ruihua Han.
  </description>
  <maintainer email="robert_kaiyuan@utexas.edu">Kaiyuan Zhang</maintainer>
  <license>GPL-3.0-or-later</license>
  <url type="repository">https://github.com/hanruihua/NeuPAN</url>

  <buildtool_depend>cmake</buildtool_depend>
  <depend>eigen</depend>
  <depend>yaml-cpp</depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
