<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>neupan_cpp_ros</name>
  <version>0.1.0</version>
  <description>
    ROS2 wrapper node for libneupan, the C++ port of the NeuPAN planner.
    Topic-compatible with the upstream neupan_ros (ROS1) node.
  </description>
  <maintainer email="robert_kaiyuan@utexas.edu">Kaiyuan Zhang</maintainer>
  <license>GPL-3.0-or-later</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>libneupan</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>

  <exec_depend>ros2launch</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
